# auto_fuck_sj

./: .gitignore  HANDOFF.md  README.md  README.zh-CN.md  SKILL.md  check_encoding.py  check_result.txt  main.py  pyproject.toml  stdout_check.txt  temp_input.txt  test_data.txt  test_kimi_backend.py  test_replacement.py  方案.md  需求.md
agents/: openai.yaml
docs/: design_overview.md  project_status.md  regression_spec_example.json  regression_workflow.md  todo.md
docs/outdated/: HANDOFF.md  HANDOFF.zh-CN.md  action-tracker.md  action-tracker.zh-CN.md  current-progress.md  current-progress.zh-CN.md  design-overview.md  development-goals.md  development-goals.zh-CN.md  regression-workflow.md  regression-workflow.zh-CN.md  方案.md  需求.md
references/: constraints.md  style.md  submission-format.md  windows-encoding.md  workflow.md  workspace-layout.md
scripts/: build_testcases.py  check_constraints.py  common.py  evaluate_candidate.py  export_submission.py  extract_problem.py  init_workspace.py  observe_demo.py  parse_grouped_cases.py  summarize_failures.py
src/auto_fuck_sj/: ai_adapter.py  cli.py  codex_adapter.py  constraints.py  kimi_adapter.py  models.py  orchestrator.py  subprocess_utils.py  text_utils.py  workspace.py
src/auto_fuck_sj/prompts/: humanizer.md  solver.md  testgen.md
src/automatic_gc/: cli.py  codex_adapter.py  models.py  orchestrator.py  subprocess_utils.py  testcase_parser.py
src/automatic_gc/prompts/: solver.md
