[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-gc"
version = "0.1.0"
description = "Coursework C++ solving orchestrator with Codex and local Windows toolchain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
automatic_gc = ["prompts/*.md"]
