[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_fuck_sj"
version = "0.1.0"
description = "Coursework C++ solving orchestrator with Codex and local Windows toolchain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auto_fuck_sj = ["prompts/*.md"]

